# spotifai

./: CLAUDE.md  README.md  pyproject.toml
src/deepagent/: INSTRUCTIONS.md  PLAN.md  agent.py  chat.py  chunk.py  critic.py  executor.py  intent.py  plan.py  prompts.py  research.py  state.py  tools.py  utils.py
src/deepagent/assets/: CRITIC.md  EXECUTOR.md  FINALIZER.md  INSTRUCTIONS.md  PLAN.md  RESEARCH.md
src/spotifai/: __init__.py  __main__.py  callback.html  callback.py  spotify_manager.py  spotify_tools.py
src/spotify/: __init__.py  spotify_callback.py  spotify_manager.py  utils.py
src/spotify/assets/: callback.html
